hphp/test/zend/bad/ext/reflection/tests/010.php
<?php
class Foo {
	function func() {
	}
}
class Bar extends Foo {
	function func() {
	}
}
$m = new ReflectionMethod("Bar::func");
echo $m;
?>
